# core-math-integration

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  acos.json  acosf-benchmark.c  acosf.c  acosf_inputs.cc  acoshf.c  acoshf_inputs.cc  acospi.json  asin.json  asinf.c  asinf_inputs.cc  asinh.json  asinhf.c  asinhf_inputs.cc  asinpi.json  atan.json  atan2.json  atan2f.c  atan2f_inputs.cc  atanf.c  atanf_inputs.cc  atanf_test.c  atanh.json  atanhf.c  atanhf_inputs.cc  atanpi.json  cbrtf.c  cbrtf_inputs.c  cbrtf_inputs.cc  cbrtf_tests.c  check_inputs.c  checkinputs.cc  checkulps.cc  cos.json  (+37 more)
description/: acosh.json  asin.json  cbrt.json  cospi.json  erf.json  exp.json  exp10.json  exp2m1.json  expm1.json  lgamma.json  log.json  log10.json  log10p1.json  log2.json  tanpi.json  tgamma.json
src/: CMakeLists.txt
src/checkinputs/: CMakeLists.txt  checkinputs.cc
src/checkulps/: CMakeLists.txt  checkulps.cc  description.cc  description.h  floatranges.h  random.cc  refimpls.cc  refimpls.h  refimpls_binary32_mpfr.c  refimpls_binary64_mpfr.c  refimpls_modes.h  refimpls_mpfr.c
src/checkulps/core-math/: CMakeLists.txt  acospif.c  asinpif.c  atan2pif.c  atanpif.c  cbrtf.c  cospif.c  dint.h  erfcf.c  exp10f.c  exp2f.c  lgammaf.c  log10.c  log10p1f.c  log2p1f.c  pow.h  roundeven.c  roundevenf.c  rsqrtf.c  sinpif.c  tanpif.c  tgammaf.c
src/checkulps/description/: acos.json  acosf.json  acosh.json  acoshf.json  acospi.json  acospif.json  asin.json  asinf.json  asinh.json  asinhf.json  asinpi.json  asinpif.json  atan.json  atan2.json  atan2f.json  atanf.json  atanh.json  atanhf.json  atanpi.json  atanpif.json  cbrt.json  cbrtf.json  compoundn.json  compoundnf.json  cos.json  cosf.json  cosh.json  coshf.json  cospi.json  cospif.json  erf.json  erfc.json  erfcf.json  erff.json  exp.json  exp10.json  exp10f.json  exp10m1.json  exp10m1f.json  exp2.json  (+48 more)
src/include/: config.h.in  cxxcompat.h  floatranges.h  iohelper.h  strhelper.h  uint128.h  wyhash64.h
src/randfloatgen/: CMakeLists.txt  randfloatgen.cc
